--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@ body {
   background-size: cover;
 }
 
+.controls{
+  color: #fff;
+  text-shadow: 1px 1px 2px #000;
+}
+
 h1 {
   margin-top: 20px;
+  color:#fff;
+  text-shadow: 1px 1px 2px #000;
 }
 
 .farm {
@@ -63,7 +70,7 @@ h1 {
 .plant-img {
   width: 100%;
   height: 100%;
-  background-size: cover;          /* Fills the whole div */
+  background-size: cover;          
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
@@ -76,6 +83,8 @@ h1 {
 .info {
   margin-top: 30px;
   font-size: 18px;
+  color:#000;
+  text-shadow: 1px 1px 2px #fff;
 }
 
 button {
