--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ body {
   background-size: cover;
 }
 
-.controls{
+.controls {
   color: #fff;
   text-shadow: 1px 1px 2px #000;
 }
 
 h1 {
   margin-top: 20px;
-  color:#fff;
+  color: #fff;
   text-shadow: 1px 1px 2px #000;
 }
 
@@ -70,7 +70,7 @@ h1 {
 .plant-img {
   width: 100%;
   height: 100%;
-  background-size: cover;          
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
@@ -79,12 +79,15 @@ h1 {
   z-index: 1;
 }
 
-
 .info {
   margin-top: 30px;
-  font-size: 18px;
-  color:#000;
-  text-shadow: 1px 1px 2px #fff;
+  font-size: 22px;
+  color: #ffffff;
+  text-shadow:
+    0 0 3px #000,
+    0 0 5px #000,
+    1px 1px 2px #000,
+    -1px -1px 2px #000;
 }
 
 button {
